--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
       rel="stylesheet"
     />
-    <title>Landing</title>
+    <title>Landing Test Leo</title>
   </head>
   <body>
     <noscript>
